src/objects/Physical_Inspection__c.object
<CustomObject>
    <description>LPAM - this is the inspection information</description>
    <fields>
        <fullName>Balconies_Stairs_Decks__c</fullName>
        <label>Balconies/Stairs/Decks</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Inspection_Results</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Bathroom__c</fullName>
        <label>Bathroom</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Inspection_Results</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Boiler_Expiration__c</fullName>
        <label>Boiler Expiration</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Building_Systems_Health_Safety__c</fullName>
        <label>Health &amp; Safety</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Inspection_Results</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Common_Areas_Health_Safety__c</fullName>
        <label>Health &amp; Safety</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Inspection_Results</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Community_Room_Kitchen_Computer_Room__c</fullName>
        <label>Community Room/Kitchen/Computer Room</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Inspection_Results</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Day_Care_Clinic__c</fullName>
        <label>Day Care/Clinic</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Inspection_Results</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Doors_Conditions_Egress__c</fullName>
        <label>Doors/Conditions/Egress</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Excellent</fullName>
                </value>
                <value>
                    <fullName>Good</fullName>
                </value>
                <value>
                    <fullName>Fair</fullName>
                </value>
                <value>
                    <fullName>Poor</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Electrical_Lighting__c</fullName>
        <label>Electrical/Lighting</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Inspection_Results</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Electrical__c</fullName>
        <label>Electrical</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Inspection_Results</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Elevator_Expiration__c</fullName>
        <label>Elevator Expiration</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Elevators__c</fullName>
        <label>Elevators</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Inspection_Results</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>FHEO_Access__c</fullName>
        <label>FHEO (Access)</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Inspection_Results</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Fencing_and_Gates__c</fullName>
        <label>Fencing and Gates</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Inspection_Results</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Fire_Alarms_Expiration__c</fullName>
        <label>Fire Alarms Expiration</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Fire_Monitoring_Expiration__c</fullName>
        <label>Fire Monitoring Expiration</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Fire_protection__c</fullName>
        <label>Fire protection</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Inspection_Results</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Flooring__c</fullName>
        <label>Flooring</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Inspection_Results</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Foundation__c</fullName>
        <label>Foundation</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Inspection_Results</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>HVAC__c</fullName>
        <label>HVAC</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Inspection_Results</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Health_Safety__c</fullName>
        <label>Health &amp; Safety</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Inspection_Results</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Inspection_Date__c</fullName>
        <label>Inspection Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Inspection_Score__c</fullName>
        <label>Inspection Score</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Inspection_Type__c</fullName>
        <label>Inspection Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Initial Inspection</fullName>
                    <default>true</default>
                </value>
                <value>
                    <fullName>Re-Inspection</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Inspector__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Inspection Inspector</description>
        <label>Inspector</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Physical Inspections</relationshipLabel>
        <relationshipName>Physical_Inspections</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Interior_Doors__c</fullName>
        <label>Interior Doors</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Inspection_Results</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Kitchen__c</fullName>
        <label>Kitchen</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Inspection_Results</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Landscape_Irrigation_Grounds__c</fullName>
        <label>Landscape/Irrigation/Grounds</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Inspection_Results</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Laundry_Room__c</fullName>
        <label>Laundry Room</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Inspection_Results</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Lighting__c</fullName>
        <label>Lighting</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Inspection_Results</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Parking_Lot_Carport__c</fullName>
        <label>Parking Lot/Carport</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Inspection_Results</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Percentage_of_Units_Inspected__c</fullName>
        <label>Percentage of Units Inspected</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Physical_Inspection_Property__c</fullName>
        <label>Property</label>
        <referenceTo>Building__c</referenceTo>
        <relationshipLabel>Physical Inspections</relationshipLabel>
        <relationshipName>Physical_Inspections</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Play_Areas_Equipment__c</fullName>
        <label>Play Areas/Equipment</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Inspection_Results</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Plumbing__c</fullName>
        <label>Plumbing</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Inspection_Results</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Pools__c</fullName>
        <label>Pools</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Inspection_Results</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Restrooms__c</fullName>
        <label>Restrooms</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Inspection_Results</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Retaining_Wall__c</fullName>
        <label>Retaining Wall</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Inspection_Results</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Roof_System__c</fullName>
        <description>Building Envelop - Roofing System</description>
        <label>Roof System</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Excellent</fullName>
                </value>
                <value>
                    <fullName>Good</fullName>
                </value>
                <value>
                    <fullName>Fair</fullName>
                </value>
                <value>
                    <fullName>Poor</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Site_Health_and_Safety__c</fullName>
        <label>Site Health and Safety</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Inspection_Results</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Smoke_Detectors_CO__c</fullName>
        <label>Smoke Detectors/CO</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Inspection_Results</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Structure_Walls_Framing__c</fullName>
        <description>Building Envelop - Structure/Walls Framing</description>
        <label>Structure/Walls Framing</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Excellent</fullName>
                </value>
                <value>
                    <fullName>Good</fullName>
                </value>
                <value>
                    <fullName>Fair</fullName>
                </value>
                <value>
                    <fullName>Poor</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Total_Number_of_Buildings_Inspected__c</fullName>
        <label>Total Number of Buildings Inspected</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Number_of_Units_Inspected__c</fullName>
        <label>Total Number of Units Inspected</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Trash_Collectors__c</fullName>
        <label>Trash Collectors</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Inspection_Results</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Unit_HVAC__c</fullName>
        <label>Unit HVAC</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Inspection_Results</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Unit_Health_and_Safety__c</fullName>
        <label>Unit Health and Safety</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Inspection_Results</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Unit_Plumbing__c</fullName>
        <label>Unit Plumbing</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Inspection_Results</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Units_Inspected__c</fullName>
        <label>Units Inspected</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Walkways_Surfaces__c</fullName>
        <label>Walkways/Surfaces</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Inspection_Results</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Walls_Ceiling__c</fullName>
        <label>Walls/Ceiling</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Inspection_Results</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Walls_Finish__c</fullName>
        <label>Walls Finish</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Inspection_Results</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Windows_Conditions_Egress__c</fullName>
        <label>Windows/Conditions/Egress</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Inspection_Results</valueSetName>
        </valueSet>
    </fields>
    <label>Physical Inspection</label>
    <nameField>
        <displayFormat>LPAMPI-{00000}</displayFormat>
        <label>PhysicalInspectionID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Physical Inspections</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>